--- a/docs/.vuepress/theme/templates/ssr.html
+++ b/docs/.vuepress/theme/templates/ssr.html
@@ -39,6 +39,7 @@
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PF595C3K" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8528418355033370" crossorigin="anonymous"></script>
 </body>
 
 </html>
